# TaskDroid

./: .gitmodules  README.md  log.txt  semantics.md  semantics1.md  semanticsVal.md  semantics_validation.htm  semantics_validation.html  semantics_validation.md
tools/: CMakeLists.txt  _run.py  analysis_loop.py  analysys.py  automator.py  multi_run.py  nuxmv_source  parser.py  run.py  setup.py  taskDroid_run.py  ui_binder.py  verify.py  verify_boundedness.py
tools/ICCExtractor/: run.py  run.sh
tools/ICCExtractor/apk/: IntentFlowBench.apk
tools/ICCExtractor/logs/: IntentFlowBench.apk.txt
tools/ICCExtractor/outputDir/IntentFlowBench/cg/: cg.txt  topology.txt
tools/ICCExtractor/outputDir/IntentFlowBench/dummy/: dummyMainMethod.txt  dummyMainMethod_com_example_intentFlowBench_AbstractActivity.txt  dummyMainMethod_com_example_intentFlowBench_MainActivity.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity1.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity2.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity3.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity4.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity5.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity6.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity7.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity8.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity9__1.txt  dummyMainMethod_com_example_intentFlowBench_SubActivity9__2.txt
tools/ICCExtractor/outputDir/IntentFlowBench/fragment/: IntentFlowBench_fragLoad.dot  SingleMethod_all.xml  SingleMethod_entrty.xml  SingleObject_all.xml  SingleObject_entry.xml  SinglePath_all.xml  SinglePath_entry.xml
tools/ICCExtractor/outputDir/IntentFlowBench/ictg/: ComponentModel.xml  IntentFlowBench_ictgMerge.dot  SingleMethod_all.xml  SingleMethod_entrty.xml  SingleObject_all.xml  SingleObject_entry.xml  SinglePath_all.xml  SinglePath_entry.xml  ictgMerge.xml
tools/ICCExtractor/outputDir/IntentFlowBench/manifest/: AndroidManifest.txt
tools/ICCExtractor/outputDir/IntentFlowBench/sootOutput/: com.example.intentFlowBench.AbstractActivity.jimple  com.example.intentFlowBench.BuildConfig.jimple  (+29 more)
tools/StaticAnalyzer/: CMakeLists.txt
tools/StaticAnalyzer/include/Analyzer/: FragmentAnalyzer.hpp  LoopAnalyzer.hpp  MultiTaskAnalyzer.hpp
tools/StaticAnalyzer/include/AndroidStackMachine/: Activity.hpp  AndroidStackMachine.hpp  Fragment.hpp  Intent.hpp
tools/StaticAnalyzer/include/Parser/: ASMParser.hpp
tools/StaticAnalyzer/src/: CMakeLists.txt  main.cpp
tools/StaticAnalyzer/src/Analyzer/: CMakeLists.txt  FragmentAnalyzer.cpp  FragmentUBBP.cpp  LegalPosMaker.cpp  MultiTaskAnalyzer.cpp  MultiTaskBackHijacking.cpp  MultiTaskBoundednessAnalyzer.cpp  MultiTaskReachabilityAnalyzer.cpp  MultiTaskRealActivityAnalyzer.cpp  MultiTaskSemanticsAnalyzer.cpp  MultiTaskTestTraceGenerator.cpp  MultiTaskUBBP.cpp  MultiTaskUnexpectednessAnalyzer.cpp  NuXmvTranslator.cpp  OrderMaker.cpp  ValuesMaker.cpp
tools/StaticAnalyzer/src/AndroidStackMachine/: Activity.cpp  AndroidStackMachine.cpp  Fragment.cpp  FragmentTransaction.cpp
tools/StaticAnalyzer/src/Parser/: ASMParser.cpp
tools/apechecker/: config.py  getTopCaller.py  parse.py  quickrun.py  run.py
tools/example/: org.gnucash.android.apk
tools/include/Analyzer/: FragmentAnalyzer.hpp  LoopAnalyzer.hpp  MultiTaskAnalyzer.hpp  MutiTaskAnalyzer.hpp
tools/include/AndroidStackMachine/: Activity.hpp  AndroidStackMachine.hpp  Configuration.hpp  FragmentTransaction.hpp  Intent.hpp
tools/include/Parser/: ASMParser.hpp
tools/include/fml/test/: CMakeLists.txt  main.cpp  test.hpp  test_util.cpp
tools/logs/: IntentFlowBench.apk.txt
tools/nuxmv/: source
tools/src/: CMakeLists.txt  main.cpp
tools/src/Analyzer/: CMakeLists.txt  FragmentAnalyzer.cpp  MultiTaskBackHijacking.cpp  MultiTaskBoundednessAnalyzer.cpp  MultiTaskReachabilityAnalyzer.cpp  MutiTaskAnalyzer.cpp
tools/src/AndroidStackMachine/: Activity.cpp  AndroidStackMachine.cpp  CMakeLists.txt  Configuration.cpp  FragmentTransaction.cpp  Intent.cpp
tools/src/Parser/: ASMParser.cpp  CMakeLists.txt
tools/test/uk.co.busydoingnothing.prevo_15/: AndroidManifest.txt  SingleObject_entry.xml  ictgMerge.xml
tools/testcase/CSipSimple/: SingleObject_all.xml  atg.xml  manifest.xml
tools/testcase/simple/: SingleObject_all.xml  atg.xml  config.xml  manifest.xml
(+24 files in other folders)
